tests/fails/f16.t

terra foo(c : int)
    var a : int8 = int8(&c)
end
foo(1)
